--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,12 +1,11 @@
 /*
-	Parallelism by HTML5 UP
+	Highlights by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Loader */
 
-	body {
-		background-image: url("../../images/bg.jpg");
-		background-size: cover;
+	html body:before, html body:after {
+		display: none !important;
 	}
