--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -4,14 +4,17 @@
 @import 'libs/skel';
 
 /*
-	Parallelism by HTML5 UP
+	Highlights by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Loader */
 
-	body {
-    	background-image: url('../../images/bg.jpg');
-    	background-size: cover;
+	html {
+		body {
+			&:before, &:after {
+				display: none !important;
+			}
+		}
 	}
